<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".SplashScreen">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Let's Start Investing"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="34dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/instructions_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Type in a company symbol to learn more about a company stock:"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <EditText
        android:id="@+id/SymbolInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:hint="Stock Symbol"/>

    <Spinner
        android:id="@+id/chooseOption"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:entries="@array/stock_options" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Search" />
</LinearLayout>